{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 903,
  "lineage": "41fb2efe-c563-d5a6-fe0c-f9b193b84d8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b5dfe362930ed9b",
            "association_id": "eipassoc-0f640c559f43fe5ef",
            "domain": "vpc",
            "id": "eipalloc-09b5dfe362930ed9b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0af7ee07937bc7f59",
            "private_dns": "ip-10-0-1-205.ap-south-1.compute.internal",
            "private_ip": "10.0.1.205",
            "public_dns": "ec2-43-204-39-246.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.39.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mahiEIPinternal"
            },
            "tags_all": {
              "Name": "mahiEIPinternal"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:internet-gateway/igw-09be61f09b401cd81",
            "id": "igw-09be61f09b401cd81",
            "owner_id": "061280019180",
            "tags": {
              "Name": "mahiinternalIGW"
            },
            "tags_all": {
              "Name": "mahiinternalIGW"
            },
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:loadbalancer/app/mahiAlbinternal/b78b44924ba9e1a4",
            "arn_suffix": "app/mahiAlbinternal/b78b44924ba9e1a4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mahiAlbinternal-1753742947.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:loadbalancer/app/mahiAlbinternal/b78b44924ba9e1a4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mahiAlbinternal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b3cfc2d08abf960f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02bf5d1f9bc288890"
              },
              {
                "subnet_id": "subnet-0d1dc7c158b0d5af4"
              }
            ],
            "subnets": [
              "subnet-02bf5d1f9bc288890",
              "subnet-0d1dc7c158b0d5af4"
            ],
            "tags": {
              "Environment": "mahiAlbinternal"
            },
            "tags_all": {
              "Environment": "mahiAlbinternal"
            },
            "vpc_id": "vpc-0c564fbdf4c8e78fd",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:listener/app/mahiAlbinternal/b78b44924ba9e1a4/a5bc6164bb87ec6b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:targetgroup/mahi-target-group/3dc153991ebe9d06",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:listener/app/mahiAlbinternal/b78b44924ba9e1a4/a5bc6164bb87ec6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:loadbalancer/app/mahiAlbinternal/b78b44924ba9e1a4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:targetgroup/mahi-target-group/3dc153991ebe9d06",
            "arn_suffix": "targetgroup/mahi-target-group/3dc153991ebe9d06",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:targetgroup/mahi-target-group/3dc153991ebe9d06",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mahi-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b5dfe362930ed9b",
            "connectivity_type": "public",
            "id": "nat-0c751e6f50ebbf321",
            "network_interface_id": "eni-0af7ee07937bc7f59",
            "private_ip": "10.0.1.205",
            "public_ip": "43.204.39.246",
            "subnet_id": "subnet-02bf5d1f9bc288890",
            "tags": {
              "Name": "NATmahiinternal"
            },
            "tags_all": {
              "Name": "NATmahiinternal"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:route-table/rtb-00313677d73bd85f2",
            "id": "rtb-00313677d73bd85f2",
            "owner_id": "061280019180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c751e6f50ebbf321",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routeprivatemahiinternal"
            },
            "tags_all": {
              "Name": "Routeprivatemahiinternal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:route-table/rtb-0c9085ad784941919",
            "id": "rtb-0c9085ad784941919",
            "owner_id": "061280019180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09be61f09b401cd81",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mahiPublicRoute"
            },
            "tags_all": {
              "Name": "mahiPublicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dde45ca28082108",
            "route_table_id": "rtb-00313677d73bd85f2",
            "subnet_id": "subnet-0aa0e7dc5d81e26f8"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007a88fffb0292616",
            "route_table_id": "rtb-00313677d73bd85f2",
            "subnet_id": "subnet-0adb3df59e57c2934"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0911048b651558588",
            "route_table_id": "rtb-0c9085ad784941919",
            "subnet_id": "subnet-02bf5d1f9bc288890"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a5f399b9e47d0c8",
            "route_table_id": "rtb-0c9085ad784941919",
            "subnet_id": "subnet-0d1dc7c158b0d5af4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:security-group/sg-0dc81bf07fe9fa846",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc81bf07fe9fa846",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3cfc2d08abf960f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_sg",
            "name_prefix": "",
            "owner_id": "061280019180",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:security-group/sg-0b3cfc2d08abf960f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3cfc2d08abf960f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internalmahi-sg",
            "name_prefix": "",
            "owner_id": "061280019180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internalmahi-sg"
            },
            "tags_all": {
              "Name": "internalmahi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-0aa0e7dc5d81e26f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa0e7dc5d81e26f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Privatemahiinternal-0"
            },
            "tags_all": {
              "Name": "Privatemahiinternal-0"
            },
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-0adb3df59e57c2934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb3df59e57c2934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Privatemahiinternal-1"
            },
            "tags_all": {
              "Name": "Privatemahiinternal-1"
            },
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-02bf5d1f9bc288890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bf5d1f9bc288890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Publicmahiinternal-0"
            },
            "tags_all": {
              "Name": "Publicmahiinternal-0"
            },
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-0d1dc7c158b0d5af4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1dc7c158b0d5af4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Publicmahiinternal-1"
            },
            "tags_all": {
              "Name": "Publicmahiinternal-1"
            },
            "vpc_id": "vpc-0c564fbdf4c8e78fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:vpc/vpc-0c564fbdf4c8e78fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057ba86263930cc4e",
            "default_route_table_id": "rtb-0cdb9124584bb0f2c",
            "default_security_group_id": "sg-00c5c801d7133815a",
            "dhcp_options_id": "dopt-0de6b8c89f1565f94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c564fbdf4c8e78fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cdb9124584bb0f2c",
            "owner_id": "061280019180",
            "tags": {
              "Name": "mahiinternalVPC"
            },
            "tags_all": {
              "Name": "mahiinternalVPC"
            }
          }
        }
      ]
    }
  ]
}